--- a/Urdu-Fonts.css
+++ b/Urdu-Fonts.css
@@ -47,7 +47,7 @@
 }
 
 @font-face{
-    font-family:Indo-Pak WBW;
+    font-family: 'Naskh-Nastaleeq-IndoPak-QWBW' ;
     src:local("Naskh-Nastaleeq-IndoPak-QWBW"),
 		url("https://quranwbw.com/assets/fonts/Naskh-Nastaleeq-IndoPak-QWBW.woff");
 }
