--- a/Urdu-Fonts.css
+++ b/Urdu-Fonts.css
@@ -48,8 +48,8 @@
 
 @font-face{
     font-family: 'Naskh-Nastaleeq-IndoPak-QWBW' ;
-    src:local("Naskh-Nastaleeq-IndoPak-QWBW"),
-		url("https://quranwbw.com/assets/fonts/Naskh-Nastaleeq-IndoPak-QWBW.woff")format('woff');
+    src:local("https://quranwbw.com/assets/fonts/Naskh-Nastaleeq-IndoPak-QWBW.woff"),
+		url("https://quranwbw.com/assets/fonts/Naskh-Nastaleeq-IndoPak-QWBW.woff") format('woff');
 }
 
 
